# satellite_cnns

./: .gitignore  1-dd-apache.ipynb  3_cx_apache_pipeline.ipynb  CHANGELOG.md  README.md  TF_benin_apache_pipeline.ipynb  benin_apache_pipeline.ipynb  benin_predictions.ipynb  create_dataset.py  read_data.py  setup.py  tf_setup.py  visualize.py
archived_notebooks/: 1-dd-kenya-apache.ipynb  1-ls_apachae_pipeline.ipynb  1_dd_kenya_apache.ipynb
serving/: pyproject.toml  requirements.txt
serving/data/: __init__.py
src/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/benin-data/: pyproject.toml
src/benin-data/benin/: benin_data.py  data.py
src/benin-model/: pyproject.toml
src/benin-model/benin/: dice_score.py  model.py  npz_dataset.py  train.py
src/data/: pyproject.toml
src/data/kenya/: kenya_data.py
src/kenya-data/: pyproject.toml
src/testing/: read_testing.py
