# This file includes work covered by the following copyright and permission notices:
#
#  Copyright 2023 Google LLC
#  Licensed under the Apache License, Version 2.0 (the "License");

# https://peps.python.org/pep-0621
[project]
name = "serving"
version = "1.0.0"
description = "serving modules for SPIRES Lab"
dependencies = [
    "earthengine-api==0.1.355"
]