# This file includes work covered by the following copyright and permission notices:
#
#  Copyright 2023 Google LLC
#  Licensed under the Apache License, Version 2.0 (the "License");

# https://peps.python.org/pep-0621

[project]
name = "benin-model"
requires-python = ">=3.9"
version = "0.1.0"
authors = [
  { name="Dannie Daley", email="dannie.daley@yale.edu" },
]
description = "Package for Benin model training (Pytorch) for SPIRES Lab remote sensing"
dependencies = [
    "torch==1.13.1",  # check https://cloud.google.com/vertex-ai/docs/training/pre-built-containers#pytorch for latest
]

[project.scripts]
benin-trainer = "benin.train:main"