# This package includes work covered by the following copyright and permission notices:
#
#  GitHub repo milesial/Pytorch-UNet, commit f2625b
#     train.py
#     evaluate.py
#     unet/unet_model.py
#     unet/unet_parts.py
#     utils/dice_score.py
#  Licensed under GNU General Public License v3.0

# https://peps.python.org/pep-0621

[project]
name = "benin-model"
requires-python = ">=3.7"
version = "0.2.2"
authors = [
  { name="Dannie Daley", email="dannie.daley@yale.edu" },
]
description = "Package for Benin model training (Pytorch) for SPIRES Lab remote sensing"
dependencies = [
    "torch==1.13.1",  # check https://cloud.google.com/vertex-ai/docs/training/pre-built-containers#pytorch for latest
    "numpy==1.23.5",
]

[project.scripts]
benin-trainer = "benin.train:main"